# bike-sharing-demand-forecasting

./: BIKE-SHARING-DEMAND-FORECASTING.csv  README.md  exercise.md  forecasting.ipynb  main.py  processing.py  pyproject.toml
.metaflow/BikeSharingDemandFlow/: latest_run
.metaflow/BikeSharingDemandFlow/1769284224623085/_meta/: _self.json
.metaflow/BikeSharingDemandFlow/1769284272453476/_meta/: _self.json
.metaflow/BikeSharingDemandFlow/1769284304914741/_meta/: _self.json
.metaflow/BikeSharingDemandFlow/1769284349439418/_meta/: _self.json
.metaflow/BikeSharingDemandFlow/1769284410105261/_meta/: _self.json
.metaflow/BikeSharingDemandFlow/1769284580451728/_meta/: _self.json
.metaflow/BikeSharingDemandFlow/1769284604529644/_meta/: _self.json
.metaflow/BikeSharingDemandFlow/1769284699154924/_meta/: _self.json
.metaflow/BikeSharingDemandFlow/1769284817767361/_meta/: _self.json
.metaflow/BikeSharingDemandFlow/1769284944873099/_meta/: _self.json
.metaflow/BikeSharingDemandFlow/1769285012414408/_meta/: _self.json
.metaflow/BikeSharingDemandFlow/1769285316541217/_meta/: _self.json
.metaflow/BikeSharingDemandFlow/1769287904695764/_meta/: _self.json
.metaflow/BikeSharingDemandFlow/_meta/: _self.json
config/: config.py
data/: processed_test_data.csv  processed_train_data.csv
src/: flow.py
src/eval/: __init__.py  eval_results.py
src/hpo/: __init__.py  optuna_hpo.py
src/preprocess/: __init__.py  interaction_features.py  outlier_removal.py  time_features.py
src/train/: __init__.py  baseline_model.py
(+8235 files in other folders)
